Added average rating to toilets

--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -45,7 +45,7 @@
                           </div>
                           <div class="text-warning">
                               <i class="fas fa-star"></i>
-                              <span>4.5</span>
+                              <span><%= toilet.average_rating %></span>
                           </div>
                       </div>
                   </div>
