--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -4,12 +4,6 @@
           data-map-markers-value="<%= @markers.to_json %>"
           data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
           data-map-source-value="index"></div>
-        <div class="status-legend">
-            <h6 class="fw-bold mb-2">Status Legend</h6>
-            <div><span class="status-dot bg-success"></span>Available</div>
-            <div><span class="status-dot bg-danger"></span>Unavailable</div>
-            <div><span class="status-dot bg-warning"></span>Unknown</div>
-        </div>
     </div>
     <div class="container mt-3">
         <div class="row g-2">
@@ -25,15 +19,15 @@
                         <i class="fas fa-filter"></i>
                     </button>
                     <div class="dropdown-menu p-3" style="width: 300px;">
-                        <form action="<%= toilets_path %>" method="get">
+                        <form action="<%= toilets_path %>" method="get" data-controller="filter">
                             <h6 class="mb-2">Rating</h6>
                             <div class="mb-3">
-                                <div class="star-rating" data-filter-target="stars">
-                                    <i class="far fa-star" data-value="1"></i>
-                                    <i class="far fa-star" data-value="2"></i>
-                                    <i class="far fa-star" data-value="3"></i>
-                                    <i class="far fa-star" data-value="4"></i>
-                                    <i class="far fa-star" data-value="5"></i>
+                                <div class="star-rating" data-filter-target="stars" data-action="click->filter#setRating">
+                                    <i class="far fa-star" data-value="1" role="button"></i>
+                                    <i class="far fa-star" data-value="2" role="button"></i>
+                                    <i class="far fa-star" data-value="3" role="button"></i>
+                                    <i class="far fa-star" data-value="4" role="button"></i>
+                                    <i class="far fa-star" data-value="5" role="button"></i>
                                 </div>
                                 <input type="hidden" name="filters[stars]" data-filter-target="starsInput">
                             </div>
@@ -88,8 +82,15 @@
                 </div>
             </div>
             <div class="col-auto">
-                <button class="btn btn-outline-primary"><i class="fas fa-search"></i></button>
+                <button class="btn btn-outline-primary" type="button" id="searchButton">
+                    <i class="fas fa-search"></i>
+                </button>
             </div>
+            <script>
+                document.getElementById('searchButton').addEventListener('click', function() {
+                    document.querySelector('form[action="<%= toilets_path %>"]').submit();
+                });
+            </script>
             <div class="col-auto">
                <%= link_to new_toilet_path, class: "btn btn-outline-primary" do %>
                 <i class="fas fa-plus"></i>
