--- a/app/views/toilets/_toilet_card.html.erb
+++ b/app/views/toilets/_toilet_card.html.erb
@@ -1,30 +1,8 @@
-<div class="card h-100">
-  <%= image_tag "https://placehold.co/600x400?text=Toilet", class: "card-img-top", height: 200, style: "object-fit: cover;" %>
-
+<div class="card">
+  <img src="<%= toilet.image_url %>" class="card-img-top" alt="Toilet Image" style="height: 150px; width: 300px; object-fit: cover;">
   <div class="card-body">
     <h5 class="card-title"><%= toilet.name %></h5>
-    <p class="card-text"><%= toilet.address %></p>
-
-    <div class="d-flex justify-content-between align-items-center">
-      <div class="ratings">
-        <% if toilet.reviews.any? %>
-          <i class="fas fa-star"></i> <%= toilet.reviews.average(:rating).round(1) %>/5
-        <% else %>
-          <span class="text-muted">No ratings yet</span>
-        <% end %>
-      </div>
-
-      <div class="toilet-features">
-        <% if toilet.respond_to?(:accessible) && toilet.accessible %>
-          <i class="fas fa-wheelchair" title="Accessible"></i>
-        <% end %>
-        <% if toilet.respond_to?(:baby_friendly) && toilet.baby_friendly %>
-          <i class="fas fa-baby" title="Baby Friendly"></i>
-        <% end %>
-        <% if toilet.respond_to?(:female_friendly) && toilet.female_friendly %>
-          <i class="fas fa-female" title="Female Friendly"></i>
-        <% end %>
-      </div>
-    </div>
+    <p class="card-text"><%= toilet.location %></p>
+    <!-- Weitere Informationen zur Toilette -->
   </div>
 </div>
