--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -1,5 +1,5 @@
-    <div class="map-container position-relative">
-        <div style="width: 100%; height: 100%;"
+    <div class="map-container position-relative" style="width: 100%; height: 60vh;">
+        <div style="width: 100%; height: 100%"
           data-controller="map"
           data-map-markers-value="<%= @markers.to_json %>"
           data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
