reapiered the cards pof the dashboard page

--- a/app/views/toilets/_toilet_card.html.erb
+++ b/app/views/toilets/_toilet_card.html.erb
@@ -1,5 +1,5 @@
 <div class="card">
-  <img src="<%= toilet.image_url %>" class="card-img-top" alt="Toilet Image" style="height: 150px; width: 300px; object-fit: cover;">
+  <img src="<%= toilet.image_url %>" class="card-img-top img-fluid" alt="Toilet Image" style="height: 150px; width: auto; object-fit: cover;">
   <div class="card-body">
     <h5 class="card-title"><%= toilet.name %></h5>
     <p class="card-text"><%= toilet.location %></p>
